# voice-idea-capture

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md  brainstormer.md  pair-programmer.md  programmer.md  reviewer.md  tester.md
.agents/skills/code-review/: SKILL.md
.agents/skills/system-design-brainstorming/: SKILL.md
.agents/skills/test-writing/: SKILL.md
.agents/skills/voice-idea-pipeline/: SKILL.md
obsidian_vault/: Photo Gallery Curation and Duplicate Removal.md  Recipe Organizer and Search Tool.md
obsidian_vault/.obsidian/: workspace.json
shortcuts/: export_ideas.applescript
src/: __init__.py  config.py  enrichment.py  main.py  vault_manager.py  watcher.py
tests/: test_pipeline.py
